--- a/src/blocks/tool/index.scss
+++ b/src/blocks/tool/index.scss
@@ -1,8 +1,8 @@
 .tool{
 	color: #fff;
 	box-sizing: border-box;
-	background: #373d49;
 	border-top: 1px solid #eee;
 	height: calc(100vh - 40px);
+	box-shadow: 0 -2px 20px 0 rgba(39,54,78,.1);
   	overflow: auto;
 }
