新增预置组件库

--- a/src/blocks/head/index.scss
+++ b/src/blocks/head/index.scss
@@ -4,8 +4,14 @@
 	align-items:center;
 	padding:0 20px;
 	color: #fff;
+	font-size:18px;
 	height: 40px;
 	background: #373d49;
+	.logo{
+		a{
+			color: #fff;
+		}
+	}
 	.action{
 		display: flex;
 		.item{
