--- a/src/blocks/tool/index.scss
+++ b/src/blocks/tool/index.scss
@@ -5,4 +5,36 @@
 	height: calc(100vh - 40px);
 	box-shadow: 0 -2px 20px 0 rgba(39,54,78,.1);
   	overflow: auto;
+  	.ant-tabs-nav{
+  		.anticon{
+  			font-size:16px;
+  		}
+  	}
+  	.ant-tabs-content{
+  		height: calc(100vh - 100px);
+	  	overflow: auto;
+  	}
+  	.alls{
+  		display: flex;
+  		flex-wrap: wrap;
+  		.component{
+  			box-sizing: border-box;
+  			display: flex;
+  			align-items: center;
+  			align-content: center;
+  			width: 73px;
+  			height: 73px;
+  			margin: 1px;
+  			cursor: move;
+  			i{
+  				font-size: 20px;
+  			}
+  			.item{
+				margin: 0 auto;
+  			}
+  			&:hover{
+  				background: #eee;
+  			}
+  		}
+  	}
 }
