--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 @import '~antd/dist/antd.css';
 
+.mobile{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 736px;
+  width: 414px;
+  box-shadow: 0px 1px 4px #bbb;
+}
+
 .container{
   width: 1200px;
   margin: 0 auto;
@@ -19,7 +29,7 @@
 }
 
 .main .tool{
-  width: 300px;
+  width: 301px;
 }
 
 .App {
