--- a/src/blocks/tool/index.scss
+++ b/src/blocks/tool/index.scss
@@ -4,6 +4,7 @@
 	border-top: 1px solid #eee;
 	height: calc(100vh - 40px);
 	box-shadow: 0 -2px 20px 0 rgba(39,54,78,.1);
+  border-left: 1px solid #eee;
   	overflow: auto;
   	.ant-tabs-nav{
   		.anticon{
